--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-router-dynamic-routes",
+  "homepage": "https://lkiflatiron.github.io/react-hooks-react-router-dynamic-routes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +10,10 @@
     "react-scripts": "4.0.1"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -27,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
